[project]
name = "youtube-converter"
version = "1"
description = "Programa para converter link do youtube para mp4 ou mp3"
authors = [
    {name = "Fdark18",email = "frossard39@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yt-dlp (>=2025.7.21,<2026.0.0)",
    "streamlit (>=1.47.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.0"

